--- a/Alonaki.html
+++ b/Alonaki.html
@@ -19,7 +19,7 @@
 	<span class="navbar-brand mb-0 h1">Discover Greece</span>
 	
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="homepage.html">Homepage</a>
+      <a class="nav-item nav-link" href="index.html">Homepage</a>
       <a class="nav-item nav-link active" href="alonaki.html">Alonaki Beach</a>
 	  <a class="nav-item nav-link" href="skala.html">Skala Beach</a>
 	  <a class="nav-item nav-link" href="kerentza.html">Kerentza Beach</a>
