--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<div class="container">
 	
 	<div class="container py-5">
-    <div class="jumbotron jumbotron-fluid text-white jumbotron-image shadow" style="background-image: url(alonaki/alonaki3.jpg);">
+    <div class="jumbotron jumbotron-fluid text-white jumbotron-image shadow" style="background-image: url(MyWebDevSite/alonaki/alonaki3.jpg);">
       <h2 class="mb-4">
         Captivating Scenery
       </h2>
