--- a/Alonaki.html
+++ b/Alonaki.html
@@ -34,7 +34,7 @@
 	<main>
 	
 	<div class="container">
-	<div class="parent"> <img src="alonaki/alonaki2.jpg" alt="Alonaki Beach"> </div>
+	<div class="parent"> <img src="MyWebDevSite/alonaki/alonaki2.jpg" alt="Alonaki Beach"> </div>
 	<div class="content">
 		<h1>Alonaki Beach</h1>
 		<p>Probably the most picturesque beach of the Prefecture of Preveza. "Hidden" in small streets that lead you to it through a forest of pines, emerges a small beautiful cove with a huge rock in the middle. The crystal clear waters of the bay and its "secrecy" made it a place of special importance during World War II. {source: visitpreveza.gr}</p>
