--- a/Alonaki.html
+++ b/Alonaki.html
@@ -19,8 +19,8 @@
 	<span class="navbar-brand mb-0 h1">Discover Greece</span>
 	
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="MyWebDevSite/index.html">Homepage</a>
-      <a class="nav-item nav-link active" href="alonaki.html">Alonaki Beach</a>
+      <a class="nav-item nav-link" href="index.html">Homepage</a>
+      <a class="nav-item nav-link active" href="Alonaki.html">Alonaki Beach</a>
 	  <a class="nav-item nav-link" href="skala.html">Skala Beach</a>
 	  <a class="nav-item nav-link" href="kerentza.html">Kerentza Beach</a>
       <a class="nav-item nav-link" href="info.html">Learn More</a>
@@ -34,7 +34,7 @@
 	<main>
 	
 	<div class="container">
-	<div class="parent"> <img src="MyWebDevSite/alonaki/alonaki2.jpg" alt="Alonaki Beach"> </div>
+	<div class="parent"> <img src="Alonaki/alonaki2.jpg" alt="Alonaki Beach"> </div>
 	<div class="content">
 		<h1>Alonaki Beach</h1>
 		<p>Probably the most picturesque beach of the Prefecture of Preveza. "Hidden" in small streets that lead you to it through a forest of pines, emerges a small beautiful cove with a huge rock in the middle. The crystal clear waters of the bay and its "secrecy" made it a place of special importance during World War II. {source: visitpreveza.gr}</p>
