--- a/skala.html
+++ b/skala.html
@@ -34,7 +34,7 @@
 	<main>
 	
 	<div class="container">
-	<img src="skala/skala2.jpg" alt="Skala Beach">
+	<img src="Skala/skala2.jpg" alt="Skala Beach">
 	<div class="content">
 		<h1>Skala Beach</h1>
 		<p>"Buried" in a beautiful pine forest, Skala testifies, that access to a golden bay of the Ionian requires the descent of some steep stairs or one of the old paths. Its crystal clear waters are chosen by several owners of small and medium boats, who explore the dozens of picturesque coves of N. Preveza by sea. The rocky bottom also gives the opportunity to those who like to explore the sea wealth with a mask. {source: visitpreveza.gr}</p>
