--- a/kerentza.html
+++ b/kerentza.html
@@ -35,7 +35,7 @@
 	
 	
 	<div class="container">
-	<img src="kerentza/Kerentza3.jpg" alt="Kerentza Beach">
+	<img src="kerentza/kerentza3.jpg" alt="Kerentza Beach">
 	<div class="content">
 		<h1>Kerentza Beach</h1>
 		<p>Kerentza is a beach with fine sand, sandy and rocky bottom and shallow waters. The beach is also called “Bay of Odysseus”, a name that comes from Homer’s description in the Odyssey, which narrates that in this bay, Odysseus disembarked to visit Acheron. {source: visitpreveza.gr}</p>
